trunk/OldArchive/c82e378972e1b7d4de008949193698ec-0e5891ff8107f561b22ca21b6b60d875/output
+ g++ -std=c++03 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:16: error: invalid suffix "de" on integer constant
      ntdll.dll!778115de()  
                ^
main.cpp:3:13: error: invalid suffix "de" on integer constant
   ntdll.dll!778115de()  
             ^
main.cpp:4:13: error: exponent has no digits
   ntdll.dll!7780014e()  
             ^
main.cpp:5:14: error: exponent has no digits
   user32.dll!7730965e()  
              ^
main.cpp:6:16: error: invalid suffix "c6" on floating constant
   kernel32.dll!76e222c6()  
                ^
main.cpp:7:3: warning: floating constant exceeds range of ‘double’ [-Woverflow]
   kernel32.dll!76e22578()  
   ^
main.cpp:8:16: error: invalid suffix "b" on floating constant
   kernel32.dll!76e2243b()  
                ^
main.cpp:9:3: warning: floating constant exceeds range of ‘double’ [-Woverflow]
   kernel32.dll!76e22442()  
   ^
main.cpp:1:6: error: ‘ntdll’ does not name a type
      ntdll.dll!778115de()  
      ^
